--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -2,9 +2,46 @@
 <div class="table-responsive" *ngIf="students">
   <table class="table table-bordered">
     <thead>
-      
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Actions</th>
+      </tr>
     </thead>
+    <tbody>
+      <tr *ngFor="let student of students">
+        <td>{{ student.id }}</td>
+        <td>{{ student.name }}</td>
+        <td>
+          <div class="btn-group">
+            <button class="btn btn-info" (click)="studentEdit(student)">Edit</button>
+            <button class="btn btn-danger" (click)="deleteStudent(student.id)">Delete</button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
   </table>
+  <button class="btn btn-success" (click)="staticModal.show()">Add</button>
 </div>
 
-// Finish here
+<div class="modal fade" bsModal #staticModal="bs-modal" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Static modal</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="staticModal.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Student name">
+          </div>
+          <button type="button" class="btn btn-success" (click)="createStudent()">Create</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
